--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
-  },
+  "react": "19.2.0",
+  "react-dom": "19.2.0",
+  "next": "16.0.0",
+  "firebase": "^11.0.2"
+},
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
